--- a/src/index.css
+++ b/src/index.css
@@ -2,36 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Active Navigation Link */
-.active {
-  @apply text-cyan-500;
-}
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
 
-.active svg {
-  @apply text-cyan-500;
-}
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 
-.bar:nth-child(2) {
-  animation-delay: 0.2s;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
-.bar:nth-child(3) {
-  animation-delay: 0.4s;
-}
-.bar:nth-child(4) {
-  animation-delay: 0.6s;
-}
-.bar:nth-child(5) {
-  animation-delay: 0.8s;
-}
-.bar:nth-child(6) {
-  animation-delay: 1s;
-}
-
-.smooth-transition {
-  transition: all 0.3s ease-in-out;
-}
-
-/* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
@@ -40,4 +25,19 @@
 .hide-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
